--- a/components/styles/header.module.css
+++ b/components/styles/header.module.css
@@ -3,7 +3,8 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  box-shadow: 0 1px 5px gray;
+  box-shadow: 0 0px 5px gray;
+  margin-bottom: 5px;
 }
 .header a {
   display: flex;
