les pion et un peux de logique (sprit  du jeux)

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,7 @@
   font-size: large;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
 }
 
