--- a/components/styles/tab.module.css
+++ b/components/styles/tab.module.css
@@ -1,6 +1,11 @@
-.tab{
-    width: 80px;
-    height: 80px;
-    background-color: white;
-    border-radius: 4px;
+.tab {
+  width: 80px;
+  height: 80px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  border: 1px solid gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
